fix too large images

--- a/themes/book/static/css/style.css
+++ b/themes/book/static/css/style.css
@@ -31,6 +31,7 @@ article{
 #content img {
     object-fit: contain;
     max-width: 100%;
+    max-height: 50vh;
 }
 
 h1 {
